mautic.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mautic 
  namespace: placeholder
  labels:
    app: mautic 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mautic 
  template:
    metadata:
      labels:
        app: mautic 
    spec:
      containers:
        - image: mautic/mautic 
          name: mautic
          resources:
            limits:
              memory: 384Mi
            requests:
              memory: 384Mi
          ports:
            - containerPort: 80
              name: mautic
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            httpGet:
              path: /s/login
              port: 80
