mautic.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    heritage: Tiller
  name: mautic-ingress
  namespace: placeholder
spec:
  rules:
  - host: mautic.example.co
    http:
      paths:
      - backend:
          serviceName: mautic-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - mautic.example.co
    secretName: mautic-auto-deploy-tls
